# ccsopt

./: LICENSE  Makefile  README.md  pyproject.toml
ccsopt/: predictor.py  pso.py  stats.py
notebooks/: eda.ipynb  main.ipynb  stats.ipynb  surrogate.ipynb
